<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/newsImg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ig_height"
        android:contentDescription="@string/news_img"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/newsTitle"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/google_sans_bold"
        android:textStyle="bold"
        android:textAlignment="inherit"
        tools:text="@string/newsTitle" />

    <TextView
        android:id="@+id/newsDesc"
        style="@style/newsDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:ems="1"
        android:fontFamily="@font/google_sans_italic"
        android:maxLines="2"
        android:textStyle="bold"
        tools:text="@string/newsDesc" />

    <TextView
        android:id="@+id/newsAuthor"
        style="@style/newsAuthor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/google_sans"
        android:textColor="@android:color/black"
        tools:text="@string/author" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newsType"
            style="@style/newsType"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/google_sans"
            android:textColor="@android:color/holo_red_light"
            tools:text="@string/newsType" />

        <TextView
            android:id="@+id/newsDate"
            style="@style/newsDate"
            android:gravity="center"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/google_sans"
            android:textColor="@android:color/black"
            tools:text="@string/date" />


    </LinearLayout>

</LinearLayout>